# sofa-mdbook

./: .gitignore  .gitmodules  README.md  book.toml  build.sh  preprocess.hs  sample.md
mathmd/: .gitignore  CHANGELOG.md  build-install.sh  in.md  mathmd.cabal  minimal.tex  out.md  test-pandoc.sh  test.sh
mathmd/app/: FileTree.hs  Main.hs  Preprocess.hs  Process.hs  ReadWrite.hs  Summary.hs
mathmd/in/01. x/: 01. aa.md  02. bb.md
mathmd/in/02. y/: 01. cc.md
src/: README.md  SUMMARY.md  chapter_1.md  sample.md
src/01. Definitions/: 01. Sofa.md  02. Geometric Primitives.md
src/02. Monotone Sofas/: 01. Moving Hallway Problem.md  02. Monotone Sofas.md  03. Differential Geometry on Monotone Sofas.md
src/03. Finite-Dimensional Approximation A_fin/: 01. Overview.md
src/04. Injectivity Theorem/: 01. Overview.md
src/05. Upper Bound A_1/: 01. Construction of A_1.md  02. Calculus of Variation on A_1.md
src/A1. Theory of Convex Curves and Bodies/: 01. Convex Bodies.md  02. Boundary Measure.md  03. Area.md  0x. Convex Curves.md
src/A2. Generalized Green's Theorem/: 01. Green's Theorem.md  03. Mamikon's Theorem.md
