cabal-version:      2.4
name:               mathmd
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jineon Baek
maintainer:         jineon@umich.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable mathmd
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Preprocess
                    , ReadWrite
                    , Process
                    , Summary
                    , FileTree

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>= 4.16.4.0
                    , filepath ^>= 1.4.2.2
                    , foldl ^>= 1.4.12
                    , pandoc ^>= 3.1
                    , pandoc-types ^>= 1.23
                    , text ^>= 2.0.1
                    , turtle ^>= 1.6.1 
                    , uri-encode ^>= 1.5.0.7
    hs-source-dirs:   app
    default-extensions: 
                      OverloadedStrings
                    , DeriveFoldable
    default-language: Haskell2010
